# Vivaldi

./: CMakeLists.txt  README.md  grammar.txt  index.html  params.json
examples/: fixedpoint.vv  fizzbuzz.vv  io.vv  primes.vv  types.vv
src/: .parser.cpp.swp  builtins.cpp  builtins.h  environment.cpp  environment.h  expression.h  gc.cpp  gc.h  lang_utils.cpp  lang_utils.h  main.cpp  parser.cpp  parser.h  repl.cpp  repl.h  run_file.cpp  run_file.h  symbol.cpp  symbol.h  tokenizer.cpp  utils.h  validator.cpp  value.cpp  value.h  vm.cpp  vm.h
src/ast/: .while_loop.cpp.swp  array.cpp  array.h  assignment.cpp  assignment.h  block.cpp  block.h  cond_statement.cpp  cond_statement.h  dictionary.cpp  dictionary.h  except.cpp  except.h  for_loop.cpp  for_loop.h  function_call.cpp  function_call.h  function_definition.cpp  function_definition.h  literal.cpp  literal.h  logical_and.cpp  logical_and.h  logical_or.cpp  logical_or.h  member.cpp  member.h  member_assignment.cpp  member_assignment.h  method_call.cpp  method_call.h  object_creation.cpp  object_creation.h  require.cpp  require.h  return_statement.cpp  return_statement.h  try_catch.cpp  try_catch.h  type_definition.cpp  (+7 more)
src/builtins/: array.cpp  bool.cpp  dictionary.cpp  file.cpp  floating_point.cpp  integer.cpp  nil.cpp  object.cpp  range.cpp  string.cpp  symbol.cpp  type.cpp
src/value/: .builtin_function.h.swp  array.cpp  array.h  array_iterator.cpp  array_iterator.h  boolean.cpp  boolean.h  builtin_function.cpp  builtin_function.h  builtin_type.cpp  builtin_type.h  custom_object.cpp  custom_object.h  custom_type.cpp  custom_type.h  dictionary.cpp  dictionary.h  file.cpp  file.h  floating_point.cpp  floating_point.h  function.cpp  function.h  integer.cpp  integer.h  nil.cpp  nil.h  range.cpp  range.h  string.cpp  string.h  string_iterator.cpp  string_iterator.h  symbol.cpp  symbol.h
src/vm/: call_frame.cpp  call_frame.h  call_stack.cpp  call_stack.h  instruction.cpp  instruction.h
test/: array.vv  assert.vv  class.vv  except.vv  float.vv  integer.vv  logic.vv  string.vv  test.vv
